fix alignment

--- a/src/styles/components/bitbucket.scss
+++ b/src/styles/components/bitbucket.scss
@@ -12,6 +12,7 @@
     display: flex;
     margin: 30px auto 0;
     position: static;
+    right: auto;
   }
 }
 
